--- a/app/assets/stylesheets/moves.scss
+++ b/app/assets/stylesheets/moves.scss
@@ -60,7 +60,7 @@
   padding: 0px;
   text-indent: 5px;
   height: 50px;
-  width: 200px;
+  width: 100px;
   display: flex;
   align-items: center;
 }
@@ -76,7 +76,6 @@
 }
 
 #selected-moves {
-  display:none;
   margin: 0px;
   padding: 0px;
   height: 50px;
@@ -143,6 +142,10 @@
   padding: 0px;
   height: 25px;
   width: 100px;
+}
+
+#input-moves {
+  display: none;
 }
 
 #move-box-ul {
